fix get by companyCode and change output result
